--- a/Add/index.html
+++ b/Add/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fullscreen Embed</title>
+    <title>Loading...</title>
     <style>
         body, html {
             margin: 0;
@@ -21,13 +21,51 @@
 </head>
 <body>
     <script>
+        async function fetchAndSetMetadata(embedUrl) {
+            try {
+                // Fetch the page's HTML
+                const response = await fetch(embedUrl);
+                const html = await response.text();
+
+                // Parse the HTML to extract metadata
+                const parser = new DOMParser();
+                const doc = parser.parseFromString(html, "text/html");
+
+                // Update the title
+                const pageTitle = doc.querySelector("title");
+                if (pageTitle) {
+                    document.title = pageTitle.textContent;
+                }
+
+                // Update the favicon
+                const favicon = doc.querySelector("link[rel~='icon']");
+                if (favicon) {
+                    const link = document.createElement("link");
+                    link.rel = "icon";
+                    link.href = favicon.href.startsWith("http") ? favicon.href : new URL(favicon.href, embedUrl).href;
+                    document.head.appendChild(link);
+                }
+            } catch (error) {
+                console.error("Error fetching metadata:", error);
+            }
+        }
+
+        // Extract the raw query string
         const rawQuery = window.location.search;
+        // Match the `?=` format and extract the URL
         const match = rawQuery.match(/\?=(.+)/);
         const embedUrl = match ? decodeURIComponent(match[1]) : null;
+
         if (embedUrl) {
+            // Set the metadata
+            fetchAndSetMetadata(embedUrl);
+
+            // Embed the URL in an iframe
             document.write(`<iframe src="${embedUrl}" allowfullscreen></iframe>`);
         } else {
-            document.body.innerText = "No URL provided to embed.";
+            // Show an alert and redirect to the base URL
+            alert("No URL provided to embed.");
+            window.location.href = "https://kn0tzer.netlify.app/add";
         }
     </script>
 </body>
