--- a/add/embed/index.html
+++ b/add/embed/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title can't be shown</title>
+    <title>Couldn't fetch title/icon</title>
     <style>
         body, html {
             margin: 0;
