--- a/add/index.html
+++ b/add/index.html
@@ -135,7 +135,7 @@
     <section class="who-am-i">
         <h2>What is this?</h2>
         <p>
-            Enter a URL into the text box above and press embed. After, on any iOS device the website can be added to your homescreen. It will open in fullscreen as if it's an app, instead of opening Safari like normal.<br><br>
+            Enter a URL into the text box above and press embed. Then, on any iOS device the website can be added to your homescreen. It will open in fullscreen as if it's an app, instead of opening Safari like normal.<br><br>
             Some websites may say they're blocked or refused to connect. Rarely, searching something like "iframe example.com refused to connect" will give an alternate URL that works (For example google.com doesn't work but google.com/search?igpu=1 does work). Otherwise, this limitation can't be avoided no matter what. Sorry.
         </p>
 </body>
