--- a/add/embed/index.html
+++ b/add/embed/index.html
@@ -12,15 +12,26 @@
             width: 100%;
             height: 100%;
             overflow: hidden;
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
         iframe {
             width: 100%;
             height: 100%;
             border: none;
         }
+        .instruction {
+            text-align: center;
+            padding: 20px;
+        }
     </style>
 </head>
 <body>
+    <div id="content">
+        <p>Tap the (Share) icon at the bottom of your screen, then scroll down until you see 'Add to home screen' and hit add.</p>
+    </div>
     <script>
         async function fetchAndSetMetadata(embedUrl) {
             try {
@@ -55,13 +66,26 @@
         const match = rawQuery.match(/\?=(.+)/);
         const embedUrl = match ? decodeURIComponent(match[1]) : null;
 
-        if (embedUrl) {
-            fetchAndSetMetadata(embedUrl);
-            document.write(`<iframe src="${embedUrl}" allowfullscreen></iframe>`);
+        // Check if already added to home screen
+        const isStandalone = window.navigator.standalone;
+
+        if (isStandalone) {
+            // If added to homescreen then show iframe
+            if (embedUrl) {
+                fetchAndSetMetadata(embedUrl);
+                document.getElementById("content").innerHTML = `<iframe src="${embedUrl}" allowfullscreen></iframe>`;
+            } else {
+                alert("No URL provided to embed.");
+                const baseUrl = `${window.location.origin}/add`;
+                window.location.href = baseUrl;
+            }
         } else {
-            alert("No URL provided to embed.");
-            const baseUrl = `${window.location.origin}/add`;
-            window.location.href = baseUrl;
+            // If not added to homescreen then show instructions
+            document.getElementById("content").innerHTML = `
+                <div class="instruction">
+                    <p>Tap the <strong>Share</strong> <img src="https://img.icons8.com/?size=100&id=97424&format=png&color=000000" alt="" style="width: 30px; height: 30px;"> icon at the bottom of your screen, then scroll down until you see <strong>'Add to Home Screen'</strong> and hit add.</p>
+                </div>
+            `;
         }
     </script>
 </body>
