--- a/index.html
+++ b/index.html
@@ -177,11 +177,10 @@
             </div>
             <div class="project">
                 <h3>iMessage</h3>
-                <p>A janky but somehow still working method to get iMessage on *all* platforms. Never being released (Let this idea die)</p>
+                <p>A janky but somehow still working method to get iMessage on *all* platforms. Never being released. (Let this idea die)</p>
                 <h4>References</h4>
                 <p><a href="https://github.com/notAperson535/OneClick-macOS-Simple-KVM" style="color: #cccccc; text-decoration: underline;">Sorta kinda but not really based on this</a></p>
             </div>
-            
             <div class="project">
                 <h3>Web Proxy/Unblocker</h3>
                 <p>A (Now Deprecated) Ultraviolet based web proxy designed to cleanly unblock websites on school distributed devices.</p>
