--- a/add/embed/index.html
+++ b/add/embed/index.html
@@ -73,7 +73,7 @@
             // If added to homescreen then show iframe
             if (embedUrl) {
                 fetchAndSetMetadata(embedUrl);
-                document.getElementById("content").innerHTML = `<iframe src="${embedUrl}" allowfullscreen></iframe>`;
+                document.getElementById("content").innerHTML = `<iframe src="${embedUrl}" allowfullscreen style="width: 100%; height: 100%; border: none;"></iframe>`;
             } else {
                 alert("No URL provided to embed.");
                 const baseUrl = `${window.location.origin}/add`;
