--- a/add/embed/index.html
+++ b/add/embed/index.html
@@ -26,6 +26,10 @@
             text-align: center;
             padding: 20px;
         }
+        #content {
+            width: 100%;
+            height: 100%;
+        }
     </style>
 </head>
 <body>
