--- a/add/embed/index.html
+++ b/add/embed/index.html
@@ -34,7 +34,7 @@
 </head>
 <body>
     <div id="content">
-        <p>Tap the (Share) icon at the bottom of your screen, then scroll down until you see 'Add to home screen' and hit add.</p>
+        <p>Something has gone very... very wrong</p>
     </div>
     <script>
         async function fetchAndSetMetadata(embedUrl) {
