--- a/movies/index.html
+++ b/movies/index.html
@@ -1,9 +1,14 @@
-<meta name="mobile-web-app-capable" content="yes">
-<title>Movies</title>
-<link rel="icon" type="image/x-icon" href="favicon.ico">
-<script>
-setTimeout(function () {
-    window.location.href = "https://freek.to";
- }, 2000);
-</script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Movies</title>
+</head>
+<body>
+    <iframe src="https://freek.to" style="width:100%; height: 100%; border: none;"></iframe>
+</body>
+</html>
 <!-- https://ww1.fmovies0.cc/home https://nunflix.com https://www.net3lix.com/home https://faragski.com -->
