--- a/movies/index.html
+++ b/movies/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movies</title>
 </head>
-<body>
+<body style="height:100%; width: 100%;">
     <iframe src="https://freek.to" style="width:100%; height: 100%; border: none;"></iframe>
 </body>
 </html>
