--- a/movies/index.html
+++ b/movies/index.html
@@ -7,8 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movies</title>
 </head>
-<body style="height:100%; width: 100%;">
-    <iframe src="https://freek.to" style="width:100%; height: 100%; border: none;"></iframe>
+<body>
+    <div style="height: 100%; width: 100%;">
+        <iframe src="https://freek.to" style="width:100%; height: 100%; border: none;"></iframe>
+    </div>
 </body>
 </html>
 <!-- https://ww1.fmovies0.cc/home https://nunflix.com https://www.net3lix.com/home https://faragski.com -->
