--- a/movies/index.html
+++ b/movies/index.html
@@ -6,10 +6,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movies</title>
+    <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
+        iframe {
+            display: block;
+        }
+    </style>
 </head>
 <body>
     <div style="height: 100%; width: 100%;">
-        <iframe src="https://freek.to" style="width:100%; height: 100%; border: none;"></iframe>
+        <iframe src="https://freek.to" style="width: 100%; height: 100%; border: none;"></iframe>
     </div>
 </body>
 </html>
