--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <div class="project-grid">
             <div class="project">
                 <h3>Not Apple Intelligence</h3>
-                <p>Legally distinct from Apple Intelligence, this brings nearly all features of Apple Intelligence on older devices or versions, cleanly integrated into iOS through Shortcuts.</p>
+                <p>Legally distinct from Apple Intelligence, this brings nearly all features of Apple Intelligence to older devices or versions, cleanly integrated into iOS through Shortcuts.</p>
                 <h4>References</h4>
                 <p><a href="https://github.com/Kn0tzer/Shortcuts?tab=readme-ov-file#apple-intelligence" style="color: #cccccc; text-decoration: underline;">Download</a></p>
             </div>
